# CS171-Computer-Graphics

./: .clang-format  .gitignore  README.md
assignment1/: .gitattributes  .gitignore  README.md
assignment1/include/: camera.h  defines.h  mesh.h  shader.h  utils.h
assignment1/report/: report.tex
assignment1/src/: fragShader.glsl  geo_fragShader.glsl  geo_geometryShader.glsl  main.cpp  mesh.cpp  (+4 more)
assignment2/: .gitignore  CMakeLists.txt  README.md
assignment2/assets/: tea.bzs  teacup.bzs  teapot.bzs  teaspoon.bzs
assignment2/include/: bezier.h  bspline.h  camera.h  object.h  shader.h  utils.h
assignment2/report/: report.tex
assignment2/src/: adaptive_bezier.cpp  bezier.cpp  main.cpp  object.cpp  shader.cpp  shader_frag.glsl  shader_vertex.glsl  utils.cpp
assignment3/: .gitattributes  .gitignore  CMakeLists.txt  README.md
assignment3/include/: camera.h  core.h  geometry.h  image.h  integrator.h  interaction.h  light.h  material.h  ray.h  scene.h  texture.h  utils.h
assignment3/libs/: CMakeLists.txt
assignment3/libs/eigen3/: CMakeLists.txt
assignment3/report/: report.tex
assignment3/src/: CMakeLists.txt  camera.cpp  geometry.cpp  image.cpp  integrator.cpp  light.cpp  main.cpp  material.cpp  scene.cpp  texture.cpp
assignment3/test/: requirement.txt  similiar.py
assignment4/: .gitignore  CMakeLists.txt  README.md  main.cpp
assignment4/configs/: large_mesh.json  simple-mirror.json  simple.json
assignment4/include/: accel.h  bsdf.h  camera.h  config.h  config_io.h  core.h  geometry.h  image.h  integrator.h  interaction.h  light.h  load_obj.h  ray.h  scene.h  utils.h
assignment4/libs/: CMakeLists.txt
assignment4/libs/tinyobjloader/: CMakeLists.txt
assignment4/report/: acmart.cls  report.tex
assignment4/src/: CMakeLists.txt  accel.cpp  bsdf.cpp  camera.cpp  geometry.cpp  image.cpp  integrator.cpp  light.cpp  load_obj.cpp  scene.cpp
assignment5/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
(+26 files in other folders)
